welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var T = new Array[Int] (T.length)
	for (i <-0 to T.length-1) {
	if (value == i) return value
	else return -1
		
	}



}
